<resources>
    <string name="msg_wifi_enabled">Wifi enabled</string>
    <string name="msg_mobile_data_enabled">Mobile data enabled</string>
    <string name="msg_not_connected_to_internet">Not connected to Internet</string>

    <string name="log_fcm_message_id">"FCM Message Id: "</string>
    <string name="log_fcm_notification_message">"FCM Notification Message: "</string>
    <string name="log_fcm_data">"FCM Data Message: "</string>
    <string name="log_fcm_data_message">"FCM Data Message:(TA)G "</string>
    <string name="text_ok">OK</string>
    <string name="text_exit">Exit</string>
    <string name="text_retry">Retry</string>
    <string name="session_expired">Session expired.</string>
    <string name="loading">Loading…</string>

    <!-- Image Chooser -->
    <string name="text_cancel">Cancel</string>
    <string name="text_camera">Camera</string>
    <string name="text_setting">Settings</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_multiple">Multiple</string>
    <string name="text_choose_image">Choose Image</string>
    <string name="permission_camera_storage_msg">Permissions are required for camera &amp; storage.</string>
    <string name="permission_camera_storage_denied_msg">Permissions denied. Please grant permission for camera &amp; storage in setting.</string>

    <!--Error-->
    <string name="error_email_field_empty">Please enter email address.</string>
    <string name="error_invalid_email">Please enter valid email address.</string>
    <string name="error_password_field_empty">Please enter password.</string>
    <string name="error_confirm_password_field_empty">Please enter confirm password.</string>
    <string name="error_password_must_be_greater_than_5_character">Password must be greater than 5 character.</string>
    <string name="error_phone_number_field_empty">Please enter phone number.</string>
    <string name="error_invalid_phone_number">Please enter valid phone number.</string>
    <string name="error_first_name_field_empty">Please enter first name</string>
    <string name="error_name_field_empty">Please enter name</string>
    <string name="error_last_name_field_empty">Please enter last name</string>
    <string name="error_name_two_character_long">Name must contain at least two characters</string>
    <string name="error_first_name_two_character_long">First name must contain at least two characters</string>
    <string name="error_last_name_two_character_long">Last name must contain at least two characters</string>
    <string name="error_name_special_number_character">Name cannot contain number &amp; special characters</string>
    <string name="error_first_name_special_number_character">First name cannot contain number &amp; special characters</string>
    <string name="error_last_name_special_number_character">Last name cannot contain number &amp; special characters</string>
    <string name="error_password_mismatch">Password Mismatch!</string>
    <string name="error_no_files_added">No files added</string>
    <string name="error_device_not_supported">This device is not supported.</string>
    <string name="error_internet_not_connected">Not connected to internet. Please check your internet connection or try again later.</string>
    <string name="error_fb_login_failed">Facebook Login failed!!</string>
    <string name="error_not_a_valid_image_file">File is not a valid image.</string>

    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="error_invalid_data">Invalid DOB Format</string>
    <string name="error_tos">Please Accept Terms And Condition</string>
    <string name="error_gender">Please Select Gender</string>
    <string name="error_profile_pic">Please Choose An Image</string>
    <string name="email_PhoneNo">Email/Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_fac">Sign In With Facebook</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone Number</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date Of Birth</string>
    <string name="signUp">Sign up</string>
    <string name="checkbox">I accept <font color="@color/blue"><b><u>Terms of Service</u></b></font> and <font color="@color/blue"><b><u>Privacy Policy</u></b></font></string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>
    <string name="resendOTP">Resend OTP</string>
    <string name="editNumber">Edit Number</string>
    <string name="tv_OTPtop">Please Enter OTP number you have</string>
    <string name="tv_OTPbelow">recieved as an SMS on phone no : </string>
    <string name="verify">Verify</string>
    <string name="phone">Phone Number Verfication</string>
    <string name="number">+91</string>
    <string name="enter_Number">Enter Number</string>
    <string name="submit">Submit</string>
    <string name="relationship">Relationship history</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="religion">Religion</string>
    <string name="height">Height</string>
    <string name="bodytype">Body Type</string>
    <string name="smoking">Smoking</string>
    <string name="drinking">Drinking</string>
    <string name="orientation">Orientation</string>
    <string name="btn_next">Next</string>
    <string name="add_interests">Add your 5 interests</string>
    <string name="save_continue">Save And Continue</string>
</resources>
